--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/Barry8197/ISMB_Test  # Online location of your book
+  url: https://github.com/biomedicalinformaticsgroup/networks_ismb24.git  # Online location of your book 
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: master  # Which branch of the repository should be used when creating links (optional)
 
